youfull/objects/Sales_Org_Activity__c.object
<CustomObject>
    <fields>
        <fullName>ACTVTY_PCT__c</fullName>
        <label>ACTVTY_PCT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_CUST_CNT__c</fullName>
        <label>AVG_CUST_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_ORD_AMT__c</fullName>
        <label>AVG_ORD_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVG_PER_ORD_CUST_AMT__c</fullName>
        <label>AVG_PER_ORD_CUST_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_ACTVTY_PCT__c</fullName>
        <formula>( LDRSHP_NET_SLS_AMT__c + TRAD_NET_SLS_AMT__c ) / ( LDRSHP_ORD_CNT__c + TRAD_ORD_CNT__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC_ACTVTY_PCT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_AVG_ORD_CNT__c</fullName>
        <formula>( LDRSHP_NET_SLS_AMT__c + TRAD_NET_SLS_AMT__c ) / ( LDRSHP_ORD_CNT__c + TRAD_ORD_CNT__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC_AVG_ORD_CNT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CC_PD_LDRSHP_ERNGS_AMT__c</fullName>
        <label>CC_PD_LDRSHP_ERNGS_AMT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CUST_CNT__c</fullName>
        <label>CUST_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_ACTVTY_PCT__c</fullName>
        <label>LDRSHP_ACTVTY_PCT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_APPT_CNT__c</fullName>
        <label>LDRSHP_APPT_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_AVG_CUST_PER_ORD_CNT__c</fullName>
        <label>LDRSHP_AVG_CUST_PER_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_AVG_FAP_AWRD_SLS_AMT__c</fullName>
        <formula>LDRSHP_FAP_AWRD_SLS_AMT__c  /  LDRSHP_ORD_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LDRSHP_AVG_FAP_AWRD_SLS_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_AVG_ORD_AMT__c</fullName>
        <label>LDRSHP_AVG_ORD_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_AVG_PER_ORD_CUST_AMT__c</fullName>
        <label>LDRSHP_AVG_PER_ORD_CUST_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_AWRD_SLS_AMT__c</fullName>
        <label>LDRSHP_AWRD_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_BAL_DUE_AMT__c</fullName>
        <label>LDRSHP_BAL_DUE_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_FAP_AWRD_SLS_AMT__c</fullName>
        <label>LDRSHP_FAP_AWRD_SLS_AMT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_FAP_CNT__c</fullName>
        <label>LDRSHP_FAP_CNT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_FAP_PER_REP__c</fullName>
        <formula>LDRSHP_FAP_CNT__c  /  LDRSHP_ORD_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LDRSHP_FAP_PER_REP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_HOLD_ORD_CNT__c</fullName>
        <label>LDRSHP_HOLD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_IN_ZONE_FRST_ORD_CNT__c</fullName>
        <label>LDRSHP_IN_ZONE_FRST_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_IN_ZONE_STF_CNT__c</fullName>
        <label>LDRSHP_IN_ZONE_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_MRKT_TAG_1_AMT__c</fullName>
        <label>LDRSHP_MRKT_TAG_1_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_MRKT_TAG_2_AMT__c</fullName>
        <label>LDRSHP_MRKT_TAG_2_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_MRKT_TAG_3_AMT__c</fullName>
        <label>LDRSHP_MRKT_TAG_3_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_MRKT_TAG_4_TXT__c</fullName>
        <label>LDRSHP_MRKT_TAG_4_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDRSHP_MRKT_TAG_5_TXT__c</fullName>
        <label>LDRSHP_MRKT_TAG_5_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDRSHP_MRKT_TAG_6_PCT__c</fullName>
        <label>LDRSHP_MRKT_TAG_6_PCT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_NET_SLS_AMT__c</fullName>
        <label>LDRSHP_NET_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_NO_ORD_CNT__c</fullName>
        <label>LDRSHP_NO_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_ORD_CNT__c</fullName>
        <label>LDRSHP_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_ORD_INV_AMT__c</fullName>
        <label>LDRSHP_ORD_INV_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LDRSHP_ORD_INV_CNT__c</fullName>
        <label>LDRSHP_ORD_INV_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_OUT_ZONE_FRST_ORD_CNT__c</fullName>
        <label>LDRSHP_OUT_ZONE_FRST_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_OUT_ZONE_STF_CNT__c</fullName>
        <label>LDRSHP_OUT_ZONE_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_PAST_DUE_AMT__c</fullName>
        <label>LDRSHP_PAST_DUE_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_PD_SLS_AMT__c</fullName>
        <label>LDRSHP_PD_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_PENDNG_ORD_CNT__c</fullName>
        <label>LDRSHP_PENDNG_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_REP_NO_ACTVTY_CNT__c</fullName>
        <label>LDRSHP_REP_NO_ACTVTY_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_RMVL_CNT__c</fullName>
        <label>LDRSHP_RMVL_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_RNSTMT_CNT__c</fullName>
        <label>LDRSHP_RNSTMT_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_RTURN_CNT__c</fullName>
        <label>LDRSHP_RTURN_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_SBMTD_ORD_AMT__c</fullName>
        <label>LDRSHP_SBMTD_ORD_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LDRSHP_SBMTD_ORD_CNT__c</fullName>
        <label>LDRSHP_SBMTD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDRSHP_STF_CNT__c</fullName>
        <label>LDRSHP_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MRKT_ID_ZONE_CD_KEY__c</fullName>
        <externalId>true</externalId>
        <label>MRKT_ID_ZONE_CD_KEY</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MRKT_ID__c</fullName>
        <label>MRKT_ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRKT_TAG_2_PLAN_AMT__c</fullName>
        <label>MRKT_TAG_2_PLAN_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_Not_Apply__c</fullName>
        <label>May Not Apply</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NC_ACTVTY_PCT__c</fullName>
        <label>NC_ACTVTY_PCT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_APPT_CNT__c</fullName>
        <label>NC_APPT_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_AVG_AVG_ORD_AMT__c</fullName>
        <label>NC_AVG_AVG_ORD_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_AVG_CUST_PER_ORD_CNT__c</fullName>
        <label>NC_AVG_CUST_PER_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_AVG_FAP_AWRD_SLS_AMT__c</fullName>
        <formula>NC_FAP_AWRD_SLS_AMT__c  /   NC_ORD_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NC_AVG_FAP_AWRD_SLS_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_AVG_PER_ORD_CUST_AMT__c</fullName>
        <label>NC_AVG_PER_ORD_CUST_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_AWRD_SLS_AMT__c</fullName>
        <label>NC_AWRD_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_FAP_AWRD_SLS_AMT__c</fullName>
        <label>NC_FAP_AWRD_SLS_AMT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_FAP_CNT__c</fullName>
        <label>NC_FAP_CNT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_FAP_PER_REP__c</fullName>
        <formula>NC_FAP_CNT__c  /  NC_ORD_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NC_FAP_PER_REP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_HOLD_ORD_CNT__c</fullName>
        <label>NC_HOLD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_IN_ZONE_FRST_ORD_CNT__c</fullName>
        <label>NC_IN_ZONE_FRST_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_IN_ZONE_STF_CNT__c</fullName>
        <label>NC_IN_ZONE_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_MRKT_TAG_1_AMT__c</fullName>
        <label>NC_MRKT_TAG_1_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_MRKT_TAG_2_AMT__c</fullName>
        <label>NC_MRKT_TAG_2_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_MRKT_TAG_3_AMT__c</fullName>
        <label>NC_MRKT_TAG_3_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_MRKT_TAG_4_TXT__c</fullName>
        <label>NC_MRKT_TAG_4_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NC_MRKT_TAG_5_TXT__c</fullName>
        <label>NC_MRKT_TAG_5_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NC_MRKT_TAG_6_PCT__c</fullName>
        <label>NC_MRKT_TAG_6_PCT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_NET_SLS_AMT__c</fullName>
        <label>NC_NET_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_NO_ORD_CNT__c</fullName>
        <label>NC_NO_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_ORD_CNT__c</fullName>
        <label>NC_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_ORD_INV_AMT__c</fullName>
        <label>NC_ORD_INV_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NC_ORD_INV_CNT__c</fullName>
        <label>NC_ORD_INV_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_ORD_UND_MIN_AMT__c</fullName>
        <label>NC_ORD_UND_MIN_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_OUT_ZONE_FRST_ORD_CNT__c</fullName>
        <label>NC_OUT_ZONE_FRST_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_OUT_ZONE_STF_CNT__c</fullName>
        <label>NC_OUT_ZONE_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_PAST_DUE_AMT__c</fullName>
        <label>NC_PAST_DUE_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_PD_SLS_AMT__c</fullName>
        <label>NC_PD_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_PENDNG_ORD_CNT__c</fullName>
        <label>NC_PENDNG_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_REP_NO_ACTVTY_CNT__c</fullName>
        <label>NC_REP_NO_ACTVTY_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_RMVL_CNT__c</fullName>
        <label>NC_RMVL_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_RNSTMT_CNT__c</fullName>
        <label>NC_RNSTMT_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_RTURN_AMT__c</fullName>
        <label>NC_RTURN_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_SBMTD_ORD_AMT__c</fullName>
        <label>NC_SBMTD_ORD_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NC_SBMTD_ORD_CNT__c</fullName>
        <label>NC_SBMTD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NC_STF_CNT__c</fullName>
        <label>NC_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NET_SLS_PLAN_AMT__c</fullName>
        <label>NET_SLS_PLAN_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPERTNL_CMPGN_NR__c</fullName>
        <label>OPERTNL_CMPGN_NR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAST_DUE_AMT_PLAN__c</fullName>
        <label>PAST_DUE_AMT_PLAN</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_ACTVTY_PCT__c</fullName>
        <label>PC_ACTVTY_PCT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_APPT_CNT__c</fullName>
        <label>PC_APPT_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_AVG_CUST_PER_ORD_CNT__c</fullName>
        <label>PC_AVG_CUST_PER_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_AVG_FAP_AWRD_SLS_AMT__c</fullName>
        <formula>PC_FAP_AWRD_SLS_AMT__c  /  PC_ORD_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PC_AVG_FAP_AWRD_SLS_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_AVG_ORD_AMT__c</fullName>
        <label>PC_AVG_ORD_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_AVG_PER_ORD_CUST_AMT__c</fullName>
        <label>PC_AVG_PER_ORD_CUST_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_AWRD_SLS_AMT__c</fullName>
        <label>PC_AWRD_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_BAL_DUE_AMT__c</fullName>
        <label>PC_BAL_DUE_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_FAP_AWRD_SLS_AMT__c</fullName>
        <label>PC_FAP_AWRD_SLS_AMT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_FAP_CNT__c</fullName>
        <label>PC_FAP_CNT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_FAP_PER_REP__c</fullName>
        <formula>PC_FAP_CNT__c  /  PC_ORD_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PC_FAP_PER_REP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_HOLD_ORD_CNT__c</fullName>
        <label>PC_HOLD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_IN_ZONE_FRST_ORD_CNT__c</fullName>
        <label>PC_IN_ZONE_FRST_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_IN_ZONE_STF_CNT__c</fullName>
        <label>PC_IN_ZONE_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_NET_SLS_AMT__c</fullName>
        <label>PC_LDRSHP_NET_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_ORD_CNT__c</fullName>
        <label>PC_LDRSHP_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_ORD_UND_MIN_AMT__c</fullName>
        <label>PC_LDRSHP_ORD_UND_MIN_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_LDRSHP_STF_CNT__c</fullName>
        <label>PC_LDRSHP_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_MRKT_TAG_1_AMT__c</fullName>
        <label>PC_MRKT_TAG_1_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_MRKT_TAG_2_AMT__c</fullName>
        <label>PC_MRKT_TAG_2_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_MRKT_TAG_3_AMT__c</fullName>
        <label>PC_MRKT_TAG_3_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_MRKT_TAG_4_TXT__c</fullName>
        <label>PC_MRKT_TAG_4_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_MRKT_TAG_5_TXT__c</fullName>
        <label>PC_MRKT_TAG_5_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_MRKT_TAG_6_PCT__c</fullName>
        <label>PC_MRKT_TAG_6_PCT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_NET_SLS_AMT__c</fullName>
        <label>PC_NET_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_NO_ORD_CNT__c</fullName>
        <label>PC_NO_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_ORD_CNT__c</fullName>
        <label>PC_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_ORD_INV_AMT__c</fullName>
        <label>PC_ORD_INV_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_ORD_INV_CNT__c</fullName>
        <label>PC_ORD_INV_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_ORD_UND_MIN_AMT__c</fullName>
        <label>PC_ORD_UND_MIN_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_OUT_ZONE_FRST_ORD_CNT__c</fullName>
        <label>PC_OUT_ZONE_FRST_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_OUT_ZONE_STF_CNT__c</fullName>
        <label>PC_OUT_ZONE_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_PAST_DUE_AMT__c</fullName>
        <label>PC_PAST_DUE_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_PD_LDRSHP_ERNGS_AMT__c</fullName>
        <label>PC_PD_LDRSHP_ERNGS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_PD_SLS_AMT__c</fullName>
        <label>PC_PD_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_PENDNG_ORD_CNT__c</fullName>
        <label>PC_PENDNG_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_REP_NO_ACTVTY_CNT__c</fullName>
        <label>PC_REP_NO_ACTVTY_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_RMVL_CNT__c</fullName>
        <label>PC_RMVL_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_RNSTMT_CNT__c</fullName>
        <label>PC_RNSTMT_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_RTURN_AMT__c</fullName>
        <label>PC_RTURN_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_SBMTD_ORD_AMT__c</fullName>
        <label>PC_SBMTD_ORD_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PC_SBMTD_ORD_CNT__c</fullName>
        <label>PC_SBMTD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_STF_CNT__c</fullName>
        <label>PC_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_TRAD_NET_SLS_AMT__c</fullName>
        <label>PC_TRAD_NET_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_TRAD_ORD_CNT__c</fullName>
        <label>PC_TRAD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PC_TRAD_STF_CNT__c</fullName>
        <label>PC_TRAD_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PENDNG_ORD_CNT__c</fullName>
        <label>PENDNG_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_ACTVTY_PCT__c</fullName>
        <label>PLAN_ACTVTY_PCT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_ALL_ADDN_AMT__c</fullName>
        <label>PLAN_ALL_ADDN_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_APPT_CNT__c</fullName>
        <label>PLAN_APPT_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_AVG_CUST_PER_ORD_CNT__c</fullName>
        <label>PLAN_AVG_CUST_PER_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_AVG_FAP_AWRD_SLS_AMT__c</fullName>
        <formula>PLAN_FAP_AWRD_SLS_AMT__c  /  PLAN_ORD_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PLAN_AVG_FAP_AWRD_SLS_AMT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_AVG_ORD_AMT__c</fullName>
        <label>PLAN_AVG_ORD_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_AVG_PER_ORD_CUST_AMT__c</fullName>
        <label>PLAN_AVG_PER_ORD_CUST_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_AWRD_SLS_AMT__c</fullName>
        <label>PLAN_AWRD_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_FAP_AWRD_SLS_AMT__c</fullName>
        <label>PLAN_FAP_AWRD_SLS_AMT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_FAP_CNT__c</fullName>
        <label>PLAN_FAP_CNT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_FAP_PER_REP__c</fullName>
        <formula>PLAN_FAP_CNT__c  /  PLAN_ORD_CNT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PLAN_FAP_PER_REP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_HOLD_ORD_CNT__c</fullName>
        <label>PLAN_HOLD_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_IN_ZONE_FRST_ORD_CNT__c</fullName>
        <label>PLAN_IN_ZONE_FRST_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_IN_ZONE_STF_CNT__c</fullName>
        <label>PLAN_IN_ZONE_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_LDRSHP_NET_SLS_AMT__c</fullName>
        <label>PLAN_LDRSHP_NET_SLS_AMT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_MRKT_TAG_1_AMT__c</fullName>
        <label>PLAN_MRKT_TAG_1_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_MRKT_TAG_3_AMT__c</fullName>
        <label>PLAN_MRKT_TAG_3_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_MRKT_TAG_4_TXT__c</fullName>
        <label>PLAN_MRKT_TAG_4_TXT</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLAN_MRKT_TAG_5_TXT__c</fullName>
        <label>PLAN_MRKT_TAG_5_TXT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLAN_MRKT_TAG_6_PCT__c</fullName>
        <label>PLAN_MRKT_TAG_6_PCT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_NO_ORD_CNT__c</fullName>
        <label>PLAN_NO_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_ORD_CNT__c</fullName>
        <label>PLAN_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_ORD_INV_AMT__c</fullName>
        <label>PLAN_ORD_INV_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PLAN_ORD_INV_CNT__c</fullName>
        <label>PLAN_ORD_INV_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_ORD_UND_MIN_AMT__c</fullName>
        <label>PLAN_ORD_UND_MIN_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_OUT_ZONE_FRST_ORD_CNT__c</fullName>
        <label>PLAN_OUT_ZONE_FRST_ORD_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_OUT_ZONE_STF_CNT__c</fullName>
        <label>PLAN_OUT_ZONE_STF_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_PD_LDRSHP_ERNGS_AMT__c</fullName>
        <label>PLAN_PD_LDRSHP_ERNGS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_PD_SLS_AMT__c</fullName>
        <label>PLAN_PD_SLS_AMT</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_REP_NO_ACTVTY_CNT__c</fullName>
        <label>PLAN_REP_NO_ACTVTY_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PLAN_RMVL_CNT__c</fullName>
        <label>PLAN_RMVL_CNT</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>